test hillshade cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,9 @@ filterwarnings =
 
 [mypy]
 ignore_missing_imports = True
+
+[mypy-tests.*]
+ignore_errors = True
+
+[mypy-versioneer]
+ignore_errors = True
